test/org/midica/testfiles/failing/note-unknown.midica
INCLUDE_FILE inc/instruments.midica

0 c+5 /4
